Work on enc builder, connector builder, abstract web builder, app client builder. Construct names the new parent>> child way.  tests don't compile.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@385372 13f79535-47bb-0310-9956-ffa450edef68